# ariska

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.sample  pyproject.toml
.build/api/: Dockerfile
.build/app/: Dockerfile
.build/nginx/: api.conf  app.conf
.streamlit/: config.toml
src/: ariska.py  main.py
src/api/: main.py
src/api/core/: config.py
src/api/routes/: router_downloads.py  router_informations.py  router_playlists.py  router_resolutions.py
src/api/services/: handle_download.py  handle_playlist.py  handle_stream.py  utility.py
src/app/: main.py
